SDI-4: 🎨 Use Stream.toList() instead